microk8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weight-tracker-deployment
  labels:
    apps: weight-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weight-tracker
  template:
    metadata:
      labels:
        app: weight-tracker
    spec:
      containers:
        - name: weight-tracker
          image: localhost:32000/weight-tracker:registry
          ports:
            - containerPort: 8000
          command: ["./weight-tracker"]
