microk8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weight-tracker-service
spec:
  selector:
    app: weight-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
